{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 120,
  "lineage": "48926237-53cd-2f6f-e039-ea71ecf47883",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myvmnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkInterfaces/vmnic",
            "internal_domain_name_suffix": "rjvmssy3wnouhpczeeyq42fa5e.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/publicIPAddresses/mypublicip-1",
                "subnet_id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/myvnet-1/subnets/mysubnet-1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "60-45-BD-A8-2C-B5",
            "name": "vmnic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "myrg-1",
            "virtual_machine_id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Compute/virtualMachines/mylinuxvm-1"
          },
          "dependencies": [
            "azurerm_public_ip.mypublicip",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.mysubnet",
            "azurerm_virtual_network.myvnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkInterfaces/vmnic|/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "network_interface_id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkInterfaces/vmnic",
            "network_security_group_id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/nsg"
          },
          "dependencies": [
            "azurerm_network_interface.myvmnic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.mypublicip",
            "azurerm_resource_group.myrg",
            "azurerm_subnet.mysubnet",
            "azurerm_virtual_network.myvnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/nsg",
            "location": "eastus",
            "name": "nsg",
            "resource_group_name": "myrg-1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-ssh-22",
                "priority": 105,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS-443",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP-80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "eastus",
            "name": "web-nsg",
            "resource_group_name": "myrg-1",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_SHH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/Allow-ssh-22",
            "name": "Allow-ssh-22",
            "network_security_group_name": "nsg",
            "priority": 105,
            "protocol": "Tcp",
            "resource_group_name": "myrg-1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/Allow-HTTP-80",
            "name": "Allow-HTTP-80",
            "network_security_group_name": "nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "myrg-1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/networkSecurityGroups/nsg/securityRules/Allow-HTTPS-443",
            "name": "Allow-HTTPS-443",
            "network_security_group_name": "nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "myrg-1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mypublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "app1-vm-k7qahx",
            "fqdn": "app1-vm-k7qahx.eastus.cloudapp.azure.com",
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/publicIPAddresses/mypublicip-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.173.147.127",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mypublicip-1",
            "resource_group_name": "myrg-1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/myvnet-1/subnets/mysubnet-1",
            "name": "mysubnet-1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myrg-1",
            "virtual_network_name": "myvnet-1"
          },
          "dependencies": [
            "azurerm_resource_group.myrg",
            "azurerm_virtual_network.myvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myvnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4bc96a8a-b31d-435d-bc59-21310f70a0fc",
            "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/myvnet-1",
            "location": "eastus",
            "name": "myvnet-1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "myrg-1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/77618802-0818-4173-8674-95a126ef0cc2/resourceGroups/myrg-1/providers/Microsoft.Network/virtualNetworks/myvnet-1/subnets/mysubnet-1",
                "name": "mysubnet-1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.myrg"
          ]
        }
      ]
    }
  ]
}